--- a/Depo/Depo/Presentation/SupportFormController/SupportFormController.xib
+++ b/Depo/Depo/Presentation/SupportFormController/SupportFormController.xib
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SupportFormController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SupportFormController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="scrollView" destination="2pQ-Xv-lt4" id="ttU-FV-q58"/>
                 <outlet property="sendButton" destination="CHb-qr-U2J" id="GCh-vx-Gos"/>
@@ -30,12 +28,12 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="102" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6Tq-17-xxS">
-                                    <rect key="frame" x="20" y="20" width="280" height="102"/>
+                                    <rect key="frame" x="16" y="12" width="288" height="102"/>
                                 </stackView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHb-qr-U2J" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
-                                    <rect key="frame" x="72" y="142" width="176" height="44"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHb-qr-U2J" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="28" y="144" width="264" height="45"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="SG8-PV-DDT"/>
+                                        <constraint firstAttribute="height" constant="45" id="SG8-PV-DDT"/>
                                     </constraints>
                                     <state key="normal" title="Button">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -47,13 +45,14 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="6Tq-17-xxS" firstAttribute="top" secondItem="qei-N7-1wp" secondAttribute="top" constant="20" id="bwd-kA-PgP"/>
-                                <constraint firstItem="6Tq-17-xxS" firstAttribute="leading" secondItem="qei-N7-1wp" secondAttribute="leading" constant="20" id="fsx-lf-5RX"/>
-                                <constraint firstItem="CHb-qr-U2J" firstAttribute="top" secondItem="6Tq-17-xxS" secondAttribute="bottom" constant="20" id="hFt-kd-eQz"/>
+                                <constraint firstAttribute="trailing" secondItem="CHb-qr-U2J" secondAttribute="trailing" constant="28" id="8tG-bN-V5t"/>
+                                <constraint firstItem="6Tq-17-xxS" firstAttribute="top" secondItem="qei-N7-1wp" secondAttribute="top" constant="12" id="bwd-kA-PgP"/>
+                                <constraint firstItem="CHb-qr-U2J" firstAttribute="leading" secondItem="qei-N7-1wp" secondAttribute="leading" constant="28" id="dKt-sj-JuR"/>
+                                <constraint firstItem="6Tq-17-xxS" firstAttribute="leading" secondItem="qei-N7-1wp" secondAttribute="leading" constant="16" id="fsx-lf-5RX"/>
+                                <constraint firstItem="CHb-qr-U2J" firstAttribute="top" secondItem="6Tq-17-xxS" secondAttribute="bottom" constant="30" id="hFt-kd-eQz"/>
                                 <constraint firstItem="CHb-qr-U2J" firstAttribute="centerX" secondItem="qei-N7-1wp" secondAttribute="centerX" id="lei-cn-c53"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="CHb-qr-U2J" secondAttribute="bottom" constant="20" id="yDH-pB-4pf"/>
-                                <constraint firstAttribute="trailing" secondItem="6Tq-17-xxS" secondAttribute="trailing" constant="20" id="zKx-BI-Pw5"/>
-                                <constraint firstItem="CHb-qr-U2J" firstAttribute="width" secondItem="qei-N7-1wp" secondAttribute="width" multiplier="0.55" id="zlX-cz-NQW"/>
+                                <constraint firstAttribute="trailing" secondItem="6Tq-17-xxS" secondAttribute="trailing" constant="16" id="zKx-BI-Pw5"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -67,14 +66,15 @@
                     </constraints>
                 </scrollView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2pQ-Xv-lt4" secondAttribute="trailing" id="Bty-pq-2Mz"/>
                 <constraint firstItem="2pQ-Xv-lt4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="KgB-sx-pNo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2pQ-Xv-lt4" secondAttribute="bottom" id="SGK-ot-CnU" customClass="KeyboardLayoutConstraint" customModule="lifebox" customModuleProvider="target"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2pQ-Xv-lt4" secondAttribute="bottom" id="SGK-ot-CnU" customClass="KeyboardLayoutConstraint" customModule="Billo" customModuleProvider="target"/>
                 <constraint firstItem="2pQ-Xv-lt4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="f5F-OL-SgI"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="139" y="151"/>
         </view>
     </objects>
 </document>
