--- a/Depo/Depo/Presentation/UserStories/Others/SecurityInfoPopup/SecurityInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SecurityInfoPopup/SecurityInfoViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecurityInfoPopup" customModule="Billo" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecurityInfoViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="bottomLabel" destination="IWU-qM-KfE" id="1XL-Pp-zAE"/>
                 <outlet property="saveButton" destination="mSM-Cz-jeL" id="RkU-Gn-6GG"/>
