--- a/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotoView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotoView.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TBMatikPhotoView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TBMatikPhotoView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="348"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -31,30 +31,29 @@
                         <constraint firstItem="Sei-b9-PTq" firstAttribute="centerY" secondItem="CaN-3s-eQq" secondAttribute="centerY" id="h3Z-wt-Rc0"/>
                     </constraints>
                 </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EFw-aJ-xz3">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EFw-aJ-xz3">
                     <rect key="frame" x="8" y="8" width="359" height="332"/>
                 </imageView>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="N2u-7d-fdq">
                     <rect key="frame" x="177.5" y="164" width="20" height="20"/>
                 </activityIndicatorView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="CaN-3s-eQq" secondAttribute="bottom" constant="8" id="8AU-hE-p6p"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CaN-3s-eQq" secondAttribute="trailing" constant="8" id="N44-kz-V7W"/>
+                <constraint firstItem="EFw-aJ-xz3" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="OxG-CX-pu0"/>
                 <constraint firstItem="N2u-7d-fdq" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="beS-Wi-ISW"/>
                 <constraint firstItem="EFw-aJ-xz3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="cPP-Ze-vll"/>
                 <constraint firstItem="CaN-3s-eQq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="cfi-NH-P5Y"/>
-                <constraint firstItem="EFw-aJ-xz3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="top" id="ily-rK-tNd"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="EFw-aJ-xz3" secondAttribute="bottom" constant="8" id="f8q-wt-6GQ"/>
                 <constraint firstItem="N2u-7d-fdq" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="src-Tf-XQi"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="EFw-aJ-xz3" secondAttribute="trailing" constant="8" id="ty1-Us-xZo"/>
-                <constraint firstItem="EFw-aJ-xz3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="whp-2b-uWK"/>
                 <constraint firstItem="CaN-3s-eQq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="yux-nb-Krx"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="EFw-aJ-xz3" secondAttribute="bottom" id="zbG-2v-2dl"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="imageView" destination="EFw-aJ-xz3" id="MFm-OD-lGG"/>
                 <outlet property="loadingIndicator" destination="N2u-7d-fdq" id="ecT-7h-Nqt"/>
