--- a/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotosViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/TBMatikPhotosViewController/TBMatikPhotosViewController.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +14,7 @@
                 <outlet property="backgroundImageView" destination="zlC-hj-dcw" id="kbR-3L-iD4"/>
                 <outlet property="carousel" destination="bIe-nx-Ucd" id="Ohx-x6-CzP"/>
                 <outlet property="closeButton" destination="d8W-rB-aKw" id="f45-dg-F5f"/>
+                <outlet property="dateLabel" destination="681-im-dt4" id="1ms-WC-uS6"/>
                 <outlet property="shareButton" destination="ZDf-lG-9Th" id="U10-DB-jnC"/>
                 <outlet property="timelineButton" destination="Lge-oI-I7M" id="zZz-ee-aYp"/>
                 <outlet property="titleLabel" destination="ugr-WK-tJf" id="D2w-iT-PyI"/>
@@ -27,78 +29,93 @@
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zlC-hj-dcw">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <color key="backgroundColor" name="tbtBlurBackground"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugr-WK-tJf">
-                    <rect key="frame" x="30" y="77" width="315" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="v6b-nR-31y"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8W-rB-aKw">
-                    <rect key="frame" x="329" y="44" width="38" height="38"/>
+                    <rect key="frame" x="329" y="60" width="38" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="4wT-JY-hkC"/>
                         <constraint firstAttribute="width" constant="38" id="PDh-qk-Qdo"/>
                     </constraints>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <state key="normal" image="closeButton"/>
+                    <state key="normal" image="settingsIconCancel"/>
                     <connections>
                         <action selector="onClose" destination="-1" eventType="touchUpInside" id="7cx-9l-mEt"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIe-nx-Ucd" customClass="iCarousel">
-                    <rect key="frame" x="0.0" y="143" width="375" height="518"/>
+                    <rect key="frame" x="0.0" y="156.66666666666666" width="375" height="461.33333333333337"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lge-oI-I7M" customClass="TimelineButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="14" y="711" width="169" height="44"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="f5c-9G-PkR">
+                    <rect key="frame" x="70" y="634" width="235" height="104"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lge-oI-I7M" customClass="TimelineButton" customModule="Billo" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="235" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="aNt-u3-ErL"/>
+                            </constraints>
+                            <state key="normal" title="See Timeline"/>
+                            <connections>
+                                <action selector="onSeeTimeline" destination="-1" eventType="touchUpInside" id="BgX-bF-rXM"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDf-lG-9Th" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="60" width="235" height="44"/>
+                            <state key="normal" title="Share"/>
+                            <connections>
+                                <action selector="onShare" destination="-1" eventType="touchUpInside" id="vJo-Sq-b4l"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="aNt-u3-ErL"/>
+                        <constraint firstItem="Lge-oI-I7M" firstAttribute="height" secondItem="ZDf-lG-9Th" secondAttribute="height" id="rje-5U-gGf"/>
+                        <constraint firstAttribute="width" constant="235" id="yJO-wd-0Lu"/>
                     </constraints>
-                    <state key="normal" title="See Timeline"/>
-                    <connections>
-                        <action selector="onSeeTimeline" destination="-1" eventType="touchUpInside" id="BgX-bF-rXM"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDf-lG-9Th" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="192" y="711" width="169" height="44"/>
-                    <state key="normal" title="Share"/>
-                    <connections>
-                        <action selector="onShare" destination="-1" eventType="touchUpInside" id="vJo-Sq-b4l"/>
-                    </connections>
-                </button>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-4" translatesAutoresizingMaskIntoConstraints="NO" id="PZf-yZ-BzI">
+                    <rect key="frame" x="167" y="88" width="41.333333333333343" height="36.666666666666657"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugr-WK-tJf">
+                            <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="681-im-dt4">
+                            <rect key="frame" x="0.0" y="16.333333333333329" width="41.333333333333336" height="20.333333333333329"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="zlC-hj-dcw" secondAttribute="trailing" id="26N-Lf-zPg"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ugr-WK-tJf" secondAttribute="trailing" constant="30" id="2Ky-Xo-N3m"/>
-                <constraint firstItem="ugr-WK-tJf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="3BT-m2-kl1"/>
-                <constraint firstItem="ZDf-lG-9Th" firstAttribute="top" secondItem="Lge-oI-I7M" secondAttribute="top" id="3ks-ZJ-fmh"/>
+                <constraint firstItem="PZf-yZ-BzI" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="2IE-rR-Hb2"/>
+                <constraint firstItem="f5c-9G-PkR" firstAttribute="top" secondItem="bIe-nx-Ucd" secondAttribute="bottom" constant="16" id="2b3-bz-duR"/>
                 <constraint firstItem="zlC-hj-dcw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="4wz-rc-7Yq"/>
-                <constraint firstItem="Lge-oI-I7M" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="7BT-v8-Ed2"/>
-                <constraint firstItem="ZDf-lG-9Th" firstAttribute="leading" secondItem="Lge-oI-I7M" secondAttribute="trailing" constant="9" id="BSu-Iy-NU8"/>
-                <constraint firstItem="bIe-nx-Ucd" firstAttribute="top" secondItem="ugr-WK-tJf" secondAttribute="bottom" constant="16" id="Evo-lQ-ryU"/>
-                <constraint firstItem="ugr-WK-tJf" firstAttribute="top" secondItem="d8W-rB-aKw" secondAttribute="bottom" constant="-5" id="G3e-AN-7CO"/>
+                <constraint firstItem="bIe-nx-Ucd" firstAttribute="top" secondItem="PZf-yZ-BzI" secondAttribute="bottom" constant="32" id="70F-Wb-swl"/>
                 <constraint firstAttribute="bottom" secondItem="zlC-hj-dcw" secondAttribute="bottom" id="JA6-O8-WW6"/>
-                <constraint firstItem="ZDf-lG-9Th" firstAttribute="width" secondItem="Lge-oI-I7M" secondAttribute="width" id="MCU-jN-cCd"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Lge-oI-I7M" secondAttribute="bottom" constant="23" id="Pie-gS-CWx"/>
-                <constraint firstItem="Lge-oI-I7M" firstAttribute="top" secondItem="bIe-nx-Ucd" secondAttribute="bottom" constant="50" id="RV9-gi-ZGI"/>
-                <constraint firstItem="Lge-oI-I7M" firstAttribute="height" secondItem="ZDf-lG-9Th" secondAttribute="height" id="TXx-rA-0Mo"/>
+                <constraint firstItem="PZf-yZ-BzI" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="44" id="Mte-hF-b9k"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="d8W-rB-aKw" secondAttribute="trailing" constant="8" id="ceW-e3-A8u"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ZDf-lG-9Th" secondAttribute="trailing" constant="14" id="iSl-2O-7P4"/>
                 <constraint firstItem="zlC-hj-dcw" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kdN-GA-qn7"/>
                 <constraint firstItem="bIe-nx-Ucd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="mWS-ic-uQt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bIe-nx-Ucd" secondAttribute="trailing" id="pni-yx-t4D"/>
-                <constraint firstItem="d8W-rB-aKw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="y6I-sw-jQk"/>
+                <constraint firstItem="f5c-9G-PkR" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="qXE-6T-bWr"/>
+                <constraint firstItem="d8W-rB-aKw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="y6I-sw-jQk"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="f5c-9G-PkR" secondAttribute="bottom" constant="40" id="yI3-Fh-XEa"/>
             </constraints>
-            <point key="canvasLocation" x="138" y="140"/>
+            <point key="canvasLocation" x="136.80000000000001" y="139.65517241379311"/>
         </view>
     </objects>
     <resources>
-        <image name="closeButton" width="17.666666030883789" height="17.666666030883789"/>
+        <image name="settingsIconCancel" width="24" height="24"/>
+        <namedColor name="tbtBlurBackground">
+            <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="0.69999998807907104" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
